# cassandrina

./: .env.example  .gitignore  PLAN.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.gocache/: trim.txt
.gocache/00/: 0041d04a989ffba4a99fc62fbd830713e1c724e35af15e21492d447cb30ea0d7-a  00b195e0c5cc09ee57370778ff631c1f873e6a0e4536920c17f15f36ac05a941-a  00c1843e57c2423e4efc0f8cf4b41fedd46ef17209ba2a1f557e17f13afbb97d-a
.gocache/01/: 0167e53bdf4a44da7236bfb3c89b6aa5e387157d4545514b0fa8f17b2ccebb51-a  01bad511b98379e4354ae0ae078a5a6f1833d914db3e054c9f64a1322c01cac3-a  01c8511224d7359709dea96a590a80319cd8c036fd707a091172c006eced13f0-a  01dc6495b2457830bd464fd78d82d377b0f9269ef3a656928902c80a6e3d783e-a  01dd1e505a31f7924514d5d354f6cd63f132a495b8bb1ddd01650a43955e0a2b-a
examples/: dashboard.html  history.html  leaderboard.html  predictions.html  settings.html  trade_details.html  wallet.html
infrastructure/: docker-compose.dev.yml  docker-compose.yml
services/trading-bot/: Dockerfile  pyproject.toml
services/trading-bot/cassandrina/: __init__.py  binance_client.py  decision_engine.py  exchange.py  hyperliquid_bootstrap.py  hyperliquid_client.py  lnd_client.py  main.py  market_data.py  polymarket.py  profit.py  repository.py  scheduler.py  scoring.py  strategy.py  trade_executor.py
services/trading-bot/tests/: test_binance_client.py  test_decision_engine.py  test_hyperliquid_bootstrap.py  test_hyperliquid_client.py  test_lnd_client.py  test_polymarket.py  test_profit.py  test_scheduler.py  test_scoring.py  test_strategy.py  test_trade_executor.py
(+2398 files in other folders)
